<resources>
    <string name="app_name" translatable="false">Bichi Movil</string>
    <!-- Auth Strings -->
    <string name="email">Correo electrónico</string>
    <string name="confirm_password">Confirmar contraseña</string>
    <string name="sign_in">Ingresar</string>
    <string name="sign_up">Registrarse</string>
    <string name="send_email">Enviar</string>
    <string name="forgot_password">¿Olvidaste tu contraseña?</string>
    <string name="go_to_signup">¿No tienes cuenta? Regístrate</string>
    <string name="go_to_signin">¿Ya tienes cuenta? Inicia sesión</string>
    <string name="create_account">Crear cuenta</string>
    <string name="recover_password">Recuperar contraseña</string>
    <string name="recover_password_hint">Ingresa tu email para recibir instrucciones</string>
    <string name="back_to_signin">Volver a Iniciar sesión</string>

    <string name="hello_blank_fragment">Pantalla en construcción</string>
    <string name="mail">Correo electrónico</string>
    <string name="password">Contraseña</string>
</resources>


